# python-project-lvl1

./: .gitignore  Makefile  README.md  brain_even.py  pyproject.toml
.github/workflows/: Check file  check-file.yml
brain_games/: engine.py  general_logic.py
brain_games/games/: ar_progression.py  calculator.py  even.py  gcd.py  general_conditions.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
