[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nastyavin86@br.ru>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:check_for_even"
brain-calc = "brain_games.scripts.brain_calc:calculate"
brain-gcd = "brain_games.scripts.brain_gcd: greatest_common_divisor"
brain-progression = "brain_games.scripts.brain_progression:work_with_progression"
brain-prime = "brain_games.scripts.brain_prime:prime_number"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
